// Copyright (C) 2018 go-nebulas authors
//
// This file is part of the go-nebulas library.
//
// the go-nebulas library is free software: you can redistribute it and/or modify
// it under the terms of the GNU General Public License as published by
// the Free Software Foundation, either version 3 of the License, or
// (at your option) any later version.
//
// the go-nebulas library is distributed in the hope that it will be useful,
// but WITHOUT ANY WARRANTY; without even the implied warranty of
// MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
// GNU General Public License for more details.
//
// You should have received a copy of the GNU General Public License
// along with the go-nebulas library.  If not, see <http://www.gnu.org/licenses/>.
//

syntax = "proto3";

import "github.com/nebulasio/go-nebulas/core/pb/block.proto";

package syncpb;

message Sync {
    bytes tail_block_hash = 1;
}

message ChunkHeader {
	repeated bytes headers = 1;
	bytes root = 2;
}

message ChunkHeaders {
    repeated ChunkHeader chunkHeaders = 1;
	bytes root = 2;
}

message ChunkData {
	repeated corepb.Block blocks = 1;
	bytes root = 2;
}
